# pytorch-learning

./: README.md  pyproject.toml
session01/: 01_learnig.ipynb
