[tool.poetry]
name = "pytorch-learning"
version = "0.1.0"
description = ""
authors = ["Ramon Buckland <ramon@thebuckland.com>"]
readme = "README.md"
packages = [{include = "pytorch_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
ipykernel = "^6.29.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
